samples/_failures_safe/1761549902_774234_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ea5f32cd.c: In function ‘main’:
./samples/SAFE/__tmp_ea5f32cd.c:125:9: error: expected expression at end of input
  125 |         print_matrix(rows1,
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_ea5f32cd.c:125:9: error: too few arguments to function ‘print_matrix’
./samples/SAFE/__tmp_ea5f32cd.c:37:6: note: declared here
   37 | void print_matrix(int rows, int cols, int matrix[MAX_DIM][MAX_DIM]) {
      |      ^~~~~~~~~~~~
./samples/SAFE/__tmp_ea5f32cd.c:125:9: error: expected declaration or statement at end of input
  125 |         print_matrix(rows1,
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_ea5f32cd.c:125:9: error: expected declaration or statement at end of input
